# modeling_bot

./: example.env  pyproject.toml
src/bot/: config.py  global_ctx.py  keyboards.py  main.py
src/bot/handlers/: base_handlers.py  errors_handler.py
src/bot/internal/: controllers.py  enums.py  helpers.py  lexicon.py  notify_admin.py
src/bot/middlewares/: updates_dumper_middleware.py
